# ES_PCS26

./: .gitignore  LICENSE  README.md  first.txt
esercitazione1/: CMakeLists.txt  media.cpp  printargs.cpp
esercitazione2/: CMakeLists.txt  ES Posizionamento in memoria.txt  algoritmi.cpp  bubblesort.cpp  cadd  gadd  printaddr.cpp  printzero.cpp  zeroc  zerog
esercitazione3/: CMakeLists.txt  main.cpp  rational.hpp
esercitazione4/: CMakeLists.txt  main.cpp  sortplot.m  sorts.hpp  test_bubblesort.cpp  test_selectionsort.cpp  timecounter.cpp
esercitazione4/tempi/: tempi_0.txt  tempi_1.txt  tempi_10.txt  tempi_11.txt  tempi_12.txt  tempi_13.txt  tempi_14.txt  tempi_2.txt  tempi_3.txt  tempi_4.txt  tempi_5.txt  tempi_6.txt  tempi_7.txt  tempi_8.txt  tempi_9.txt
esercitazione5/: CMakeLists.txt  main.cpp  sortplot.m  sorts.hpp  test_insertionsort.cpp  test_mergesort.cpp  test_quicksort.cpp
esercitazione5/rand_time/: CMakeLists.txt
esercitazione5/tempi/: tempi_0.txt  tempi_1.txt  tempi_10.txt  tempi_11.txt  tempi_12.txt  tempi_13.txt  tempi_14.txt  tempi_15.txt  tempi_16.txt  tempi_17.txt  tempi_18.txt  tempi_19.txt  tempi_2.txt  tempi_20.txt  tempi_21.txt  tempi_22.txt  tempi_23.txt  tempi_24.txt  tempi_3.txt  tempi_4.txt  tempi_5.txt  tempi_6.txt  tempi_7.txt  tempi_8.txt  tempi_9.txt  tempiexp_0.txt  tempiexp_1.txt  tempiexp_10.txt  tempiexp_11.txt  tempiexp_12.txt  tempiexp_13.txt  tempiexp_14.txt  tempiexp_15.txt  tempiexp_16.txt  tempiexp_17.txt  tempiexp_18.txt  tempiexp_19.txt  tempiexp_2.txt  tempiexp_20.txt  tempiexp_21.txt  (+10 more)
